policy-controller/podsecurity/fail-pod-priv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-privileged
  namespace: bd-demo
  labels:
    app: nginx-privileged
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true #false
