policy-controller/podsecurity/pass-pod-priv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-non-privileged
  labels:
    app: nginx-non-privileged
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged:  false
#    resources:
#      limits:
#        cpu: "100m"
#        memory: "1Gi"
