policy-controller/podsecurity/constraint-pod-priv.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
  namespace: bd-demo
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
